--- a/css/custom.css
+++ b/css/custom.css
@@ -43,13 +43,6 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   color: #413622 !important;
 }
 
-/* Media query for mobile view to add 50% transparency */
-@media (max-width: 767.98px) {
-  .navbar-collapse.collapse.show {
-    background-color: rgba(255, 255, 255, 0.5) !important;
-  }
-}
-
 /*
  * Jumbotron
  */
@@ -88,4 +81,22 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
  */
  .my-4 {
   margin: 0rem !important;
+}
+
+/* Style for image overlays */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 1050;
+}
+.overlay img {
+  max-height: 80%;
+  max-width: 80%;
 }
