--- a/css/custom.css
+++ b/css/custom.css
@@ -114,4 +114,7 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   card-body {
     color: white !important;
   }
+  text-body-secondary {
+    color: rgba(33, 37, 41, 0.75) !important;
+  }
 }
