--- a/css/custom.css
+++ b/css/custom.css
@@ -106,15 +106,25 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #eeeeee !important;
-      color: black;
+    color: black;
   }
-  navbar-toggler {
-    color: #413622 !important;
+
+  .navbar {
+    --bs-navbar-toggler-border-color: lightgray;
+    color: rgba(65, 54, 34, 0.8);
   }
-  card-body {
-    color: white !important;
+  :root {
+    --bs-emphasis-color-rgb: black;
+    --bs-secondary-color: gray;
   }
-  text-body-secondary {
-    color: rgba(33, 37, 41, 0.75) !important;
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   }
+
+  .card-body {
+    background: white !important;
+  }
+  .card {
+    --bs-card-border-color: lightgray;
+  } 
 }
