--- a/css/custom.css
+++ b/css/custom.css
@@ -43,6 +43,10 @@ body {
   color: white;
 }
 
+.nav {
+  --bs-nav-link-hover-color: gray;
+}
+
 a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   color: #413622 !important;
 }
