--- a/css/custom.css
+++ b/css/custom.css
@@ -91,6 +91,12 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   margin: 0rem !important;
 }
 
+@media (max-width: 576px) {
+  footer p {
+    font-size: 0.65rem;
+  }
+}
+
 /* Style for image overlays */
 .overlay {
   position: fixed;
