make images smaller

--- a/css/custom.css
+++ b/css/custom.css
@@ -69,19 +69,19 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   background-image: url("../images/mountainblur.jpg");
 }
 .jumbotron-story {
-  background-image: url("../images/cheekkiss.jpg");
+  background-image: url("../images/cheekkiss.jpeg");
 }
 .jumbotron-schedule {
-  background-image: url("../images/rockhands.jpg");
+  background-image: url("../images/rockhands.jpeg");
 }
 .jumbotron-travel {
-  background-image: url("../images/leading.jpg");
+  background-image: url("../images/leading.jpeg");
 }
 .jumbotron-faq {
-  background-image: url("../images/foreheadkiss.jpg");
+  background-image: url("../images/foreheadkiss.jpeg");
 }
 .jumbotron-ty {
-  background-image: url("../images/dancing.jpg");
+  background-image: url("../images/dancing.jpeg");
 }
 
 /*
