--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,10 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   color: #413622 !important;
 }
 
+a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
+  margin-right: 0;
+}
+
 /*
  * Jumbotron
  */
@@ -62,6 +66,23 @@ a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
   color: #ffffff;
   padding-top: 10rem;
   padding-bottom: 18rem;
+  position: relative;
+}
+
+.jumbotron::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.jumbotron h1,
+.jumbotron p {
+  position: relative;
+  z-index: 10;
 }
 
 /*
